--- a/src/components/query/query.html
+++ b/src/components/query/query.html
@@ -6,7 +6,7 @@
     <div class="card-body">
         <div class="form-element">
             <label>Enter SOQL Query (Ctrl/Cmd+Enter to execute)</label>
-            <div class="query-editor monaco-container"></div>
+            <monaco-editor class="query-editor monaco-container" language="sql"></monaco-editor>
         </div>
         <div class="m-top_small">
             <button class="button-brand query-execute-btn">Execute Query</button>
