--- a/src/components/rest-api/rest-api.html
+++ b/src/components/rest-api/rest-api.html
@@ -21,7 +21,7 @@
 
         <div class="form-element rest-body-container" style="display: none;">
             <label>Body (JSON)</label>
-            <div class="rest-request-editor monaco-container"></div>
+            <monaco-editor class="rest-request-editor monaco-container" language="json"></monaco-editor>
         </div>
 
         <div class="m-top_small">
@@ -37,6 +37,6 @@
         <h2>Response</h2>
     </div>
     <div class="card-body">
-        <div class="rest-response-editor monaco-container monaco-container-lg"></div>
+        <monaco-editor class="rest-response-editor monaco-container monaco-container-lg" language="json" readonly></monaco-editor>
     </div>
 </div>
