--- a/src/components/events/events.html
+++ b/src/components/events/events.html
@@ -1,11 +1,11 @@
 <div class="card">
     <div class="card-header">
         <div class="card-header-icon" style="background-color: #e96d63;">E</div>
-        <h2>Platform Events</h2>
+        <h2>Streaming Events</h2>
     </div>
     <div class="card-body">
         <div class="form-element">
-            <label for="event-channel-select">Event Channel</label>
+            <label for="event-channel-select">Channel</label>
             <select class="event-channel-select select">
                 <option value="">Loading channels...</option>
             </select>
