--- a/src/components/apex/apex.html
+++ b/src/components/apex/apex.html
@@ -31,6 +31,10 @@
     <div class="card-header">
         <div class="card-header-icon" style="background-color: #3ba755;">L</div>
         <h2>Output &amp; Debug Log</h2>
+        <div class="apex-output-search">
+            <input type="text" class="apex-search-input" placeholder="Filter lines...">
+            <button class="apex-search-clear" title="Clear filter">&times;</button>
+        </div>
     </div>
     <div class="card-body">
         <monaco-editor class="apex-output-editor monaco-container monaco-container-lg" language="text" readonly></monaco-editor>
