--- a/src/components/apex/apex.html
+++ b/src/components/apex/apex.html
@@ -18,7 +18,6 @@
     </div>
     <div class="card-body">
         <div class="form-element">
-            <label>Apex Code (Ctrl/Cmd+Enter to execute)</label>
             <monaco-editor class="apex-editor monaco-container" language="apex"></monaco-editor>
         </div>
         <div class="m-top_small">
@@ -30,9 +29,9 @@
 <div class="card">
     <div class="card-header">
         <div class="card-header-icon" style="background-color: #3ba755;">L</div>
-        <h2>Output &amp; Debug Log</h2>
+        <h2>Debug Log</h2>
         <div class="apex-output-search">
-            <input type="text" class="apex-search-input" placeholder="Filter lines...">
+            <input type="text" class="apex-search-input" placeholder="Filter...">
             <button class="apex-search-clear" title="Clear filter">&times;</button>
         </div>
     </div>
