--- a/src/components/query/query.html
+++ b/src/components/query/query.html
@@ -18,7 +18,6 @@
     </div>
     <div class="card-body">
         <div class="form-element">
-            <label>Enter SOQL Query (Ctrl/Cmd+Enter to execute)</label>
             <monaco-editor class="query-editor monaco-container" language="sql"></monaco-editor>
         </div>
         <div class="m-top_small">
@@ -32,7 +31,7 @@
         <div class="card-header-icon" style="background-color: #4bca81;">Q</div>
         <h2>Results</h2>
         <div class="query-results-search">
-            <input type="text" class="query-search-input" placeholder="Filter rows...">
+            <input type="text" class="query-search-input" placeholder="Filter...">
             <button class="query-search-clear" title="Clear filter">&times;</button>
         </div>
     </div>
