--- a/src/components/settings/settings.html
+++ b/src/components/settings/settings.html
@@ -22,6 +22,7 @@
                 <div class="form-element">
                     <label>LOGIN DOMAIN</label>
                     <select class="select settings-login-domain">
+                        <option value="auto">Auto-detect (Current Tab)</option>
                         <option value="https://login.salesforce.com">Production (login.salesforce.com)</option>
                         <option value="https://test.salesforce.com">Sandbox (test.salesforce.com)</option>
                         <option value="custom">Custom Domain...</option>
