--- a/src/components/query/query.html
+++ b/src/components/query/query.html
@@ -22,6 +22,10 @@
         </div>
         <div class="m-top_small">
             <button class="button-brand query-execute-btn">Execute Query</button>
+            <label class="query-tooling-label">
+                <input type="checkbox" class="query-tooling-checkbox">
+                Tooling API
+            </label>
             <span class="query-status status-badge"></span>
         </div>
     </div>
